Dec 16, 2014 Tue version

--- a/1.New York City.html
+++ b/1.New York City.html
@@ -79,42 +79,55 @@
 				<!-- <img u="thumb" src="images/1.New York City/NYC2.jpg" /> -->
 			</div>
 			<div>
+			    <a href="images/1.New York City/NYC3.jpg" data-lightbox="NYC3">
 				<img u="image" src="images/1.New York City/NYC3.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC4.jpg" data-lightbox="NYC4">
 				<img u="image" src="images/1.New York City/NYC4.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC5.jpg" data-lightbox="NYC5">
 				<img u="image" src="images/1.New York City/NYC5.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC6.jpg" data-lightbox="NYC6">
 				<img u="image" src="images/1.New York City/NYC6.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC7.jpg" data-lightbox="NYC7">
 				<img u="image" src="images/1.New York City/NYC7.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC8.jpg" data-lightbox="NYC8">
 				<img u="image" src="images/1.New York City/NYC8.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC9.jpg" data-lightbox="NYC9">
 				<img u="image" src="images/1.New York City/NYC9.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC10.jpg" data-lightbox="NYC10">
 				<img u="image" src="images/1.New York City/NYC10.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC11.jpg" data-lightbox="NYC11">
 				<img u="image" src="images/1.New York City/NYC11.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC12.jpg" data-lightbox="NYC12">
 				<img u="image" src="images/1.New York City/NYC12.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC13.jpg" data-lightbox="NYC13">
 				<img u="image" src="images/1.New York City/NYC13.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC14.jpg" data-lightbox="NYC14">
 				<img u="image" src="images/1.New York City/NYC14.jpg" />
 			</div>
 			<div>
+			<a href="images/1.New York City/NYC15.jpg" data-lightbox="NYC15">
 				<img u="image" src="images/1.New York City/NYC15.jpg" />
 			</div>
 		</div>
