--- a/4.Vancouver.html
+++ b/4.Vancouver.html
@@ -4,141 +4,155 @@
 		<meta charset="utf-8">
 		<title>Vancouver</title>
 		<meta name="description" content="Vancouver">
-		<link rel="stylesheet" href="stylesheets/basic.css">
+		<link rel="stylesheet" href="stylesheets/pages.css">
+		<link rel="stylesheet" href="stylesheets/slick.css">
+		<link rel="stylesheet" href="stylesheets/lightbox.css" />
 		<!-- <link rel="stylesheet" href="stylesheets/skeleton.css"> -->
 		<!-- <link rel="stylesheet" href="stylesheets/layout.css"> -->
 	</head>
 	<body>
-		<div class="container">
-			<h1 class="hide-text">
-			<a href="index.html">
-				<img class="websiteLogo" src="images/website logo2.jpg">
-			</a>
-			</h1>
-		</div>
-		
-		<div id="main-nav" class="main page menu">
-			<ul>
-				<li class="border">
-					<a class="border" href="About.html">About</a>
-				</li>
-				<li class="border">
-					<a class="border" href="1.New York City.html">New York City</a>
-				</li>
-				<li class="border">
-					<a class="border" href="2.Shanghai.html">Shanghai</a>
-				</li>
-				<li class="border">
-					<a class="border" href="3.Hong Kong.html">Hong Kong</a>
-				</li>
-				<li class="border">
-					<a class="border" href="4.Vancouver.html">Vancouver</a>
-				</li>
-				<li class="border">
-					<a class="border" href="5.Chengdu.html">Chengdu</a>
-				</li>
-				<li class="border">
-					<a class="border" href="6.Beijing.html">Beijing</a>
-				</li>
-				<li class="border">
-					<a class="border" href="7.Sydney.html">Sydney</a>
-				</li>
-				<li class="border">
-					<a class="border" href="8.Koh Samui.html">Koh Samui</a>
-				</li>
-				<li class="border">
-					<a class="border" href="9.Hangzhou.html">Hangzhou</a>
-				</li>
-				<li class="border">
-					<a class="border" href="10.Life.html">Life</a>
-				</li>
-			</ul>
-		</div>
-		
-	<div id="slider1_container" style="position: relative; top: 0px; left: 100px; width: 0px; height: 0px;">
+		<body>
+		<div class="content">
+			<div class="container">
+				<h1 class="hide-text">
+				<a href="index.html">
+					<img class="websiteLogo" src="images/website logo2.jpg">
+				</a>
+				</h1>
+			</div>
 			
-			<div u="slides" style="cursor: move; position: absolute; overflow: hidden; left: 300px; top: 0px; width: 600px; height: 300px;">
-				<div>
+			<div id="main-nav" class="main page menu">
+				<ul>
+					<li class="border">
+						<a class="border" href="About.html">About</a>
+					</li>
+					<li class="border">
+						<a class="border" href="1.New York City.html">New York City</a>
+					</li>
+					<li class="border">
+						<a class="border" href="2.Shanghai.html">Shanghai</a>
+					</li>
+					<li class="border">
+						<a class="border" href="3.Hong Kong.html">Hong Kong</a>
+					</li>
+					<li class="border">
+						<a class="border" href="4.Vancouver.html">Vancouver</a>
+					</li>
+					<li class="border">
+						<a class="border" href="5.Chengdu.html">Chengdu</a>
+					</li>
+					<li class="border">
+						<a class="border" href="6.Beijing.html">Beijing</a>
+					</li>
+					<li class="border">
+						<a class="border" href="7.Sydney.html">Sydney</a>
+					</li>
+					<li class="border">
+						<a class="border" href="8.Koh Samui.html">Koh Samui</a>
+					</li>
+					<li class="border">
+						<a class="border" href="9.Hangzhou.html">Hangzhou</a>
+					</li>
+					<li class="border">
+						<a class="border" href="10.Life.html">Life</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		
+		
+	<div class="slides">
+			<i class="left arrow"><span></span></i>
+			<i class="right arrow"><span></span></i>
+			<div>
+					<a href="images/4.Vancouver/Van1.jpg" data-lightbox="Van1">
 					<img u="image" src="images/4.Vancouver/Van1.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van2.jpg" data-lightbox="Van2">
 					<img u="image" src="images/4.Vancouver/Van2.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van3.jpg" data-lightbox="Van3">
 					<img u="image" src="images/4.Vancouver/Van3.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van4.jpg" data-lightbox="Van4">
 					<img u="image" src="images/4.Vancouver/Van4.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van5.jpg" data-lightbox="Van5">
 					<img u="image" src="images/4.Vancouver/Van5.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van6.jpg" data-lightbox="Van6">
 					<img u="image" src="images/4.Vancouver/Van6.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van7.jpg" data-lightbox="Van7">
 					<img u="image" src="images/4.Vancouver/Van7.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van8.jpg" data-lightbox="Van8">
 					<img u="image" src="images/4.Vancouver/Van8.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van9.jpg" data-lightbox="Van9">
 					<img u="image" src="images/4.Vancouver/Van9.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van10.jpg" data-lightbox="Van10">
 					<img u="image" src="images/4.Vancouver/Van10.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van11.jpg" data-lightbox="Van11">
 					<img u="image" src="images/4.Vancouver/Van11.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van12.jpg" data-lightbox="Van12">
 					<img u="image" src="images/4.Vancouver/Van12.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van13.jpg" data-lightbox="Van13">
 					<img u="image" src="images/4.Vancouver/Van13.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van14.jpg" data-lightbox="Van14">
 					<img u="image" src="images/4.Vancouver/Van14.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van15.jpg" data-lightbox="Van15">
 					<img u="image" src="images/4.Vancouver/Van15.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van16.jpg" data-lightbox="Van16">
 					<img u="image" src="images/4.Vancouver/Van16.jpg" />
 				</div>
 				<div>
+				<a href="images/4.Vancouver/Van7.jpg" data-lightbox="Van17">
 					<img u="image" src="images/4.Vancouver/Van17.jpg" />
 				</div>
 			</div>
 			
 			
 			
-			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-			
-			<script src="js/jssor.slider.mini.js"></script>
-			<script>
-			jQuery(document).ready(function ($) {
-			var options = {
-			$ThumbnailNavigatorOptions: {
-			$Class: $JssorThumbnailNavigator$,
-			$ChanceToShow: 2
-			}
-			};
-			var jssor_slider1 = new $JssorSlider$('slider1_container', options);
-			});
-			</script>
-			<script src="js/jquery-1.11.0.min.js"></script>
-			<script src="js/lightbox.js"></script>
-			<script src="js/basic.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="text/javascript" src="js/slick.min.js"></script>
+		<!--<script src="js/basic.js"></script>-->
+		<script src="js/pages.js"></script>
+		
+		<!---lightbox>-->
+		<script src="js/lightbox.min.js"></script>
+		
+		
+	</div>
+	<footer>
+		<div class="end">
+			<p>Copyright © 2014 Jamie Zhou Photography | Designed and developed by Abby Zhang
+			</p>
 		</div>
-
-
-		<footer>
-	    <div class="end">
-	     <p>Copyright © 2014 Jamie Zhou Photography | Designed and developed by Abby Zhang
-	    </p>
-	    </div>
-        </footer>
-        
-		</body>
-	</html>
+	</footer>
+	
+</body>
+</html>
