--- a/7.Sydney.html
+++ b/7.Sydney.html
@@ -5,6 +5,8 @@
 		<title>Sydney</title>
 		<meta name="description" content="Sydney">
 		<link rel="stylesheet" href="stylesheets/pages.css">
+		<link rel="stylesheet" href="stylesheets/slick.css">
+		<link rel="stylesheet" href="stylesheets/lightbox.css" />
 		
 		<!-- <link rel="stylesheet" href="stylesheets/skeleton.css"> -->
 		<!-- <link rel="stylesheet" href="stylesheets/layout.css"> -->
@@ -58,34 +60,43 @@
 			</div>
 		</div>
 		
-		<div id="slider1_container" style="position: relative; top: 0px; left: 100px; width: 600px; height: 300px;">
-			
-			<div u="slides" style="cursor: move; position: absolute; overflow: hidden; left: 300px; top: 0px; width: 600px; height: 300px;">
-				<div>
+	<div class="slides">
+			<i class="left arrow"><span></span></i>
+			<i class="right arrow"><span></span></i>
+			<div>
+                    <a href="images/7.Sydney/SD1.jpg" data-lightbox="SD1">
 					<img u="image" src="images/7.Sydney/SD1.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD2.jpg" data-lightbox="SD2">
 					<img u="image" src="images/7.Sydney/SD2.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD3.jpg" data-lightbox="SD3">
 					<img u="image" src="images/7.Sydney/SD3.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD4.jpg" data-lightbox="SD4">
 					<img u="image" src="images/7.Sydney/SD4.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD5.jpg" data-lightbox="SD5">
 					<img u="image" src="images/7.Sydney/SD5.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD6.jpg" data-lightbox="SD6">
 					<img u="image" src="images/7.Sydney/SD6.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD7.jpg" data-lightbox="SD7">
 					<img u="image" src="images/7.Sydney/SD7.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD8.jpg" data-lightbox="SD8">
 					<img u="image" src="images/7.Sydney/SD8.jpg" />
 				</div>
 				<div>
+				<a href="images/7.Sydney/SD9.jpg" data-lightbox="SD9">
 					<img u="image" src="images/7.Sydney/SD9.jpg" />
 				</div>
 				
@@ -94,30 +105,23 @@
 			
 			
 			
-			<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-			
-			<script src="js/jssor.slider.mini.js"></script>
-			<script>
-			jQuery(document).ready(function ($) {
-			var options = {
-			$ThumbnailNavigatorOptions: {
-			$Class: $JssorThumbnailNavigator$,
-			$ChanceToShow: 2
-			}
-			};
-			var jssor_slider1 = new $JssorSlider$('slider1_container', options);
-			});
-			</script>
-			<script src="js/jquery-1.11.0.min.js"></script>
-			<script src="js/lightbox.js"></script>
-			<script src="js/basic.js"></script>
-
-		<!-- 	  <footer>
-	    <div class="end">
-	     <p>Copyright © 2014 Jamie Zhou Photography | Designed and developed by Abby Zhang
-	    </p>
-	    </div>
-        </footer> -->
-        
-		</body>
-	</html>
+			<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script type="text/javascript" src="js/slick.min.js"></script>
+		<!--<script src="js/basic.js"></script>-->
+		<script src="js/pages.js"></script>
+		
+		<!---lightbox>-->
+		<script src="js/lightbox.min.js"></script>
+		
+		
+	</div>
+	<footer>
+		<div class="end">
+			<p>Copyright © 2014 Jamie Zhou Photography | Designed and developed by Abby Zhang
+			</p>
+		</div>
+	</footer>
+	
+</body>
+</html>
